--- a/index.html
+++ b/index.html
@@ -17,6 +17,27 @@
   <!-- Preload hero image for faster above-the-fold rendering -->
   <link rel="preload" as="image" href="assets/images/hero.jpg" />
 
+  <!-- Canonical & Robots -->
+  <link rel="canonical" href="https://example.com/" />
+  <meta name="robots" content="index,follow,max-image-preview:large" />
+
+  <!-- Open Graph -->
+  <meta property="og:type" content="website" />
+  <meta property="og:locale" content="ja_JP" />
+  <meta property="og:site_name" content="Spice Island" />
+  <meta property="og:title" content="リゾート気分で楽しむ本格スリランカ料理 | Spice Island" />
+  <meta property="og:description" content="東京・都心のリゾート感ある店内で、スパイス香るスリランカ料理を楽しめるレストラン。デートや記念日に最適なカジュアルラグジュアリースポット。" />
+  <meta property="og:url" content="https://example.com/" />
+  <meta property="og:image" content="https://example.com/assets/images/hero.jpg" />
+  <meta property="og:image:width" content="1600" />
+  <meta property="og:image:height" content="960" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="リゾート気分で楽しむ本格スリランカ料理 | Spice Island" />
+  <meta name="twitter:description" content="東京・都心のリゾート感ある店内で、スパイス香るスリランカ料理を楽しめるレストラン。デートや記念日に最適なカジュアルラグジュアリースポット。" />
+  <meta name="twitter:image" content="https://example.com/assets/images/hero.jpg" />
+
   <!-- JSON-LD: 予約CTAに構造化データ -->
   <script type="application/ld+json">
   {
@@ -87,7 +108,7 @@
           </div>
         </div>
         <div class="hero-visual" aria-hidden="true">
-          <img src="assets/images/hero.jpg" alt="都心のリゾート感ある店内で味わう香り高いスリランカカレーのプレート" loading="eager" fetchpriority="high" decoding="async" width="1600" height="960" />
+          <img src="assets/images/hero-2.jpg" alt="都心のリゾート感ある店内で味わう香り高いスリランカカレーのプレート" loading="eager" fetchpriority="high" decoding="async" width="1600" height="960" />
         </div>
       </div>
     </section>
@@ -102,7 +123,7 @@
             <p class="body">Spice Islandでは、現地のエッセンスを大切にしながら、都心にいながら味わえるリゾートの非日常感をプラス。軽やかな辛さと香りのレイヤーで、体が喜ぶ一皿をお届けします。</p>
           </div>
           <div class="media-card">
-            <img src="assets/images/Interior.jpg" alt="都心のリゾート感ある店内のインテリア" loading="lazy" />
+            <img src="assets/images/concept-2.jpg" alt="都心のリゾート感ある店内のインテリア" loading="lazy" />
           </div>
         </div>
       </div>
