Hero、メタ、akt、説明文変更

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>リゾート気分で楽しむ本格スリランカ料理 | Spice Island</title>
-  <meta name="description" content="東京・都心のリゾート感ある店内で、スパイス香るスリランカ料理を楽しめるレストラン。デートや記念日に最適なカジュアルラグジュアリースポット。" />
+  <title>落ち着いた空間で楽しむ本格スリランカ料理 | Spice Island</title>
+  <meta name="description" content="モダンなダークウッドとグリーンに包まれた落ち着いた店内で、スパイス香るスリランカ料理を楽しめる東京のレストラン。デートや記念日に最適な上質なひとときを。" />
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,8 +25,8 @@
   <meta property="og:type" content="website" />
   <meta property="og:locale" content="ja_JP" />
   <meta property="og:site_name" content="Spice Island" />
-  <meta property="og:title" content="リゾート気分で楽しむ本格スリランカ料理 | Spice Island" />
-  <meta property="og:description" content="東京・都心のリゾート感ある店内で、スパイス香るスリランカ料理を楽しめるレストラン。デートや記念日に最適なカジュアルラグジュアリースポット。" />
+  <meta property="og:title" content="落ち着いた空間で楽しむ本格スリランカ料理 | Spice Island" />
+  <meta property="og:description" content="モダンなダークウッドとグリーンに包まれた落ち着いた店内で、スパイス香るスリランカ料理を楽しめる東京のレストラン。デートや記念日に最適な上質なひとときを。" />
   <meta property="og:url" content="https://example.com/" />
   <meta property="og:image" content="https://example.com/assets/images/hero.jpg" />
   <meta property="og:image:width" content="1600" />
@@ -34,8 +34,8 @@
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="リゾート気分で楽しむ本格スリランカ料理 | Spice Island" />
-  <meta name="twitter:description" content="東京・都心のリゾート感ある店内で、スパイス香るスリランカ料理を楽しめるレストラン。デートや記念日に最適なカジュアルラグジュアリースポット。" />
+  <meta name="twitter:title" content="落ち着いた空間で楽しむ本格スリランカ料理 | Spice Island" />
+  <meta name="twitter:description" content="モダンなダークウッドとグリーンに包まれた落ち着いた店内で、スパイス香るスリランカ料理を楽しめる東京のレストラン。デートや記念日に最適な上質なひとときを。" />
   <meta name="twitter:image" content="https://example.com/assets/images/hero.jpg" />
 
   <!-- JSON-LD: 予約CTAに構造化データ -->
@@ -100,15 +100,15 @@
       <div class="container hero-inner">
         <div class="hero-copy">
           <p class="eyebrow" style="color: var(--sub);">スパイスアイランド</p>
-          <h1 id="hero-title" class="hero-title">都心のリゾート感ある店内で味わう本格スリランカの一皿</h1>
-          <p class="lead">木材やグリーンに包まれた落ち着いたインテリアで、スパイスの奥深さを五感で楽しむ。東京でのデートや記念日に最適なカジュアルラグジュアリー・ダイニング。</p>
+          <h1 id="hero-title" class="hero-title">モダンなダークウッドとグリーンに包まれた空間で味わう本格スリランカの一皿</h1>
+          <p class="lead">木材やグリーンに包まれた落ち着いたインテリアで、スパイスの奥深さを五感で楽しむ。東京でのデートや記念日に最適な上質で心地よいダイニング。</p>
           <div class="hero-ctas">
             <a class="btn btn-accent btn-lg" href="https://example.com/reserve" target="_blank" rel="noopener">今すぐ予約する</a>
             <a class="btn btn-ghost" href="#menu">メニューを見る</a>
           </div>
         </div>
         <div class="hero-visual" aria-hidden="true">
-          <img src="assets/images/hero-2.jpg" alt="都心のリゾート感ある店内で味わう香り高いスリランカカレーのプレート" loading="eager" fetchpriority="high" decoding="async" width="1600" height="960" />
+          <img src="assets/images/hero-2.jpg" alt="モダンなダークウッドとグリーンの落ち着いた店内で味わう香り高いスリランカカレーのプレート" loading="eager" fetchpriority="high" decoding="async" width="1600" height="960" />
         </div>
       </div>
     </section>
@@ -120,10 +120,10 @@
         <div class="grid-2">
           <div>
             <p class="body">スリランカ料理は、数十種のスパイスを組み合わせた奥深い味わいと、アーユルヴェーダに根ざしたヘルシーさが魅力。ココナッツの香りと爽やかな酸味が、温かな色調のインテリアと心地よく調和します。</p>
-            <p class="body">Spice Islandでは、現地のエッセンスを大切にしながら、都心にいながら味わえるリゾートの非日常感をプラス。軽やかな辛さと香りのレイヤーで、体が喜ぶ一皿をお届けします。</p>
+            <p class="body">Spice Islandでは、現地のエッセンスを大切にしながら、都心にいながら味わえる上質で落ち着いた非日常感をプラス。軽やかな辛さと香りのレイヤーで、体が喜ぶ一皿をお届けします。</p>
           </div>
           <div class="media-card">
-            <img src="assets/images/concept-3.jpg" alt="都心のリゾート感ある店内のインテリア" loading="lazy" />
+            <img src="assets/images/yellow-rice.jpg" alt="モダンなダークウッドとグリーンの落ち着いた店内のインテリア" loading="lazy" />
           </div>
         </div>
       </div>
